--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="circ" id="green"></div>
    </div> 
    <div id="btn">
-        <button onclick="ligar()">Ligar</button>
+        <button onclick="ligar()" id="clickButton">Ligar</button>
         <button onclick="stop()">Desligar</button>
    </div>
    <script src="js.js"></script>
